fix: monaco editor double scrollbar in macro select tab of popover (#2069)

--- a/packages/uhk-web/src/app/components/macro/action-editor/tab/command/macro-command-editor.component.scss
+++ b/packages/uhk-web/src/app/components/macro/action-editor/tab/command/macro-command-editor.component.scss
@@ -4,6 +4,10 @@
     max-height: calc(100vh - 100px);
     padding: 2px;
     border: 1px solid transparent;
+
+    &.readonly {
+        max-height: fit-content;
+    }
 }
 
 :host(.active) {
